I added my Name
Checking the CICD CodePipeline

--- a/SampleWebApplication/MVC5App/Views/Home/About.cshtml
+++ b/SampleWebApplication/MVC5App/Views/Home/About.cshtml
@@ -6,7 +6,7 @@
 <h3>Sample Application</h3>
 
 <p>
-    The sample application is built on the standard MVC 5 template and uses .Net Framework 4.5. You can simply create an exact one from Visual studio by creating a new ASP.NET Web Application and select MVC as the project template.
+    JOSEPHMART: The sample application is built on the standard MVC 5 template and uses .Net Framework 4.5. You can simply create an exact one from Visual studio by creating a new ASP.NET Web Application and select MVC as the project template.
 
     <a href="http://www.asp.net/visual-studio/overview/2013/creating-web-projects-in-visual-studio">Read more</a> about creating ASP.NET Web Projects in Visual Studio.
 </p>
